docs: add TailCache 06 result pipeline milestone